--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.6",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
