--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "phpoffice/phpspreadsheet": "^4.1",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
