--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "google-gemini-php/laravel": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "openai-php/laravel": "^0.11.0",
         "phpoffice/phpspreadsheet": "^4.1",
         "tymon/jwt-auth": "^2.2"
     },
